# zed-odin

./: .gitignore  Cargo.toml  LICENSE  extension.toml  extension.wasm
.github/workflows/: release.yml
languages/odin/: config.toml  highlights.scm  indents.scm  outline.scm
src/: odin.rs
